# CSV_reader_test_case

./: .gitignore  README.md  main.py  pyproject.toml
reports/: __init__.py  base_report.py  students_performance.py  teacher_performance.py
tests/: conftest.py  test_csv_reader.py
